--- a/tailwind_django/requisition/templates/requisition/requisition_list.html
+++ b/tailwind_django/requisition/templates/requisition/requisition_list.html
@@ -168,9 +168,7 @@
                         <td class="px-6 py-4 whitespace-nowrap text-sm text-right space-x-2">
                             {% if request.user.customuser.role == 'manager' and requisition.status == 'pending' or request.user.customuser.role == 'admin' and requisition.status == 'pending_admin_approval' %}
                             <button onclick="window.location.href='{% url 'requisition:approve_requisition' requisition.id %}'"
-                                    class="inline-flex items-center px-3 py-1.5 bg-green-600 hover:bg-green-700 text-white text-sm font-medium rounded-md transition-colors duration-200">
-                                Approve
-                            </button>
+                                    class="inline-flex items-center px-3 py-1.5 bg-green-600 hover:bg-green-700 text-white text-sm font-medium rounded-md transition-colors duration-200">Approve</button>
                             {% endif %}
                             <button onclick="openRequisitionModal({{ requisition.id }})"
                                     class="inline-flex items-center px-3 py-1.5 bg-blue-600 hover:bg-blue-700 text-white text-sm font-medium rounded-md transition-colors duration-200">
